cmake_minimum_required(VERSION 3.5)
project(cplusplus)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES labs/tower_of_hanoi.cpp)
set(SOURCE_FILES labs/balanced_brackets.cpp)
set(SOURCE_FILES labs/vowel_counter.cpp)
set(SOURCE_FILES labs/bubblesort.cpp)
set(SOURCE_FILES labs/string_functions/string_functions.cpp)
set(SOURCE_FILES labs/grade_average/grade_average.cpp)
set(SOURCE_FILES labs/inventory/main.cpp)
set(SOURCE_FILES labs/stl.cpp)
set(SOURCE_FILES labs/stats/statsMain.cpp)
set(SOURCE_FILES data_structures/programs/crazy_eights/crazy_eights_main.cpp)
add_executable(cplusplus ${SOURCE_FILES})