cmake_minimum_required(VERSION 3.5)
project(cplusplus)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES labs/tower_of_hanoi.cpp)
set(SOURCE_FILES labs/balanced_brackets.cpp)
set(SOURCE_FILES labs/vowel_counter.cpp)
set(SOURCE_FILES labs/bubblesort.cpp)
set(SOURCE_FILES labs/string_functions/string_functions.cpp)
set(SOURCE_FILES labs/grade_average/grade_average.cpp)
set(SOURCE_FILES labs/inventory/main.cpp)
set(SOURCE_FILES labs/stl.cpp)
set(SOURCE_FILES labs/stats/statsMain.cpp)
set(SOURCE_FILES data_structures/labs/crazy_eights/crazy_eights_main.cpp)
set(SOURCE_FILES data_structures/labs/doublylinkedlist/list_test.cpp)
set(SOURCE_FILES data_structures/labs/evalpostfix/list_test.cpp)
set(SOURCE_FILES data_structures/labs/evalpostfix/stack_test.cpp)
set(SOURCE_FILES data_structures/labs/evalpostfix/evalPostFix.cpp)
set(SOURCE_FILES data_structures/labs/palindrome/palindrome.cpp)
set(SOURCE_FILES data_structures/labs/hashtable/hashtable_main.cpp)
set(SOURCE_FILES data_structures/labs/binary_search_tree/driver.cpp)
set(SOURCE_FILES data_structures/programs/linked_list/linkedlist_main.cpp)
set(SOURCE_FILES data_structures/programs/list_array/list_main.cpp)
set(SOURCE_FILES data_structures/code/bag/bag_main.cpp)
set(SOURCE_FILES data_structures/code/binary_search/binary_search.cpp)
set(SOURCE_FILES data_structures/code/stack_array/stack_main.cpp)
add_executable(cplusplus ${SOURCE_FILES})